# ocr-api

./: .drone.yml  .gitignore  README.md  compose.yaml
ocr-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  justfile
ocr-api-py/: .dockerignore  .gitignore  Dockerfile  compose.yaml  preload_models.py  pyproject.toml  requirements.txt
ocr-api-py/app/: main.py
ocr-api-py/src/ocr_api/: __init__.py  helpers.py
ocr-api-py/src/ocr_api/handlers/: Doctr.py  EasyOcr.py  Surya.py  __init__.py
ocr-api-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  justfile
ocr-api-rs/models/: download.sh
ocr-api-rs/src/: main.rs  ocr.rs
ocr-api-rs/src/helpers/: id.rs  mod.rs  radix_fmt.rs  temp_file.rs
ocr-api-rs/src/ocr/: mod.rs
ocr-api-rs/src/ocr/handlers/: mod.rs  ocrs.rs  tesseract.rs
ocr-api/src/: logger.rs  main.rs
ocr-api/src/config/: mod.rs
ocr-api/src/endpoint_watcher/: endpoint.rs  mod.rs  watcher.rs
ocr-api/src/helpers/: id.rs  mod.rs  timeframe.rs
ocr-api/src/router/: mod.rs
ocr-api/src/router/middleware/: auth.rs
ocr-api/src/router/routes/: mod.rs
