[package]
name = "ocr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros", "multipart"] }
image = { version = "0.25.2", features = ["png", "jpeg", "webp"] }
ocrs = "0.8.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
rten = { version = "0.10.0" }
rten-imageproc = { version = "0.10.0" }
rten-tensor = { version = "0.10.0" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["alloc"] }
tokio = { version = "1.39.2", features = ["fs", "parking_lot", "rt-multi-thread"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot"] }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
module_name_repetitions = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
cognitive_complexity = "allow"

[profile.dev.package."ocrs"]
opt-level = 3
[profile.dev.package."rten"]
opt-level = 3
[profile.dev.package."rten-imageproc"]
opt-level = 3
[profile.dev.package."rten-tensor"]
opt-level = 3

[profile.release]
strip = true
# opt-level = "s"
lto = "thin"
# panic = "abort"
codegen-units = 1
