[package]
name = "ocr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1.0.208", features = ["alloc", "derive"] }
serde_json = { version = "1.0.125", features = ["alloc"] }
tokio = { version = "1.39.3", features = ["parking_lot", "rt-multi-thread", "signal"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
module_name_repetitions = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
cognitive_complexity = "allow"

[profile.release]
strip = true
# opt-level = "s"
lto = "thin"
# panic = "abort"
codegen-units = 1
